--- a/index.html
+++ b/index.html
@@ -6,7 +6,35 @@
     </head>
     <body>
       <main>
-        <header></header>
+        <header>
+            <nav>
+                <h1 class="first">SYNTHETIC</h1>
+                <h1>WOOL</h1>
+                <h1>DENIM</h1>
+                <h1>SILK</h1>
+                <h1>LINE</h1>
+            </nav>
+            <p>Loads should be under 8 pounds. It is recommended using neutral detergent to prevent damage to the cloth and to improve the washing results.</p>
+        </header>
+        <section>
+            <div class="previous"></div>
+            <div class="middle">
+                <P>Timer</P>
+                <h3>45 min</h3>
+            </div>
+            <div class="middle">
+                <p>Temperature</p>
+                <h3>Cold</h3>
+            </div>
+            <div class="middle">
+                <p>Load</p>
+                <h3>Medium</h3>
+            </div>
+            <div class="previous next"></div>
+        </section>
+        <footer>
+            <button>START</button>
+        </footer>
       </main>  
     </body>
 </html>
