update: index.html, style.css

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <h1>SILK</h1>
                 <h1>LINE</h1>
             </nav>
-            <p>Loads should be under 8 pounds. It is recommended using neutral detergent to prevent damage to the cloth and to improve the washing results.</p>
+            <p class="instruction">Loads should be under 8 pounds. It is recommended using neutral detergent to prevent damage to the cloth and to improve the washing results.</p>
         </header>
         <section>
             <div class="previous"></div>
