update: index.html, style.css

--- a/index.html
+++ b/index.html
@@ -9,32 +9,30 @@
         <header>
             <nav>
                 <h1 class="first">SYNTHETIC</h1>
-                <h1>WOOL</h1>
-                <h1>DENIM</h1>
-                <h1>SILK</h1>
-                <h1>LINE</h1>
+                <h1 class="pink">WOOL</h1>
+                <h1 class="pink">DENIM</h1>
+                <h1 class="pink">SILK</h1>
+                <h1 class="pink">LINE</h1>
             </nav>
             <p class="instruction">Loads should be under 8 pounds. It is recommended using neutral detergent to prevent damage to the cloth and to improve the washing results.</p>
         </header>
         <section>
-            <div class="previous"></div>
-            <div class="middle">
-                <P>Timer</P>
+            <div class="previous arrow"></div>
+            <div class="middle time">
+                <P class="action">Timer</P>
                 <h3>45 min</h3>
             </div>
-            <div class="middle">
-                <p>Temperature</p>
+            <div class="middle temperature">
+                <p class="action">Temperature</p>
                 <h3>Cold</h3>
             </div>
-            <div class="middle">
-                <p>Load</p>
+            <div class="middle capacity">
+                <p class="action">Load</p>
                 <h3>Medium</h3>
             </div>
-            <div class="previous next"></div>
+            <div class="next arrow"></div>
         </section>
-        <footer>
-            <button>START</button>
-        </footer>
+            <button class="startbutton">START</button>
       </main>  
     </body>
 </html>
